# envsurf

./: .gitignore  README.md  pyproject.toml
src/envsurf/: __init__.py  cli.py  compare.py  parser.py  scanner.py  secrets.py  settings.py
tests/: test_cli.py  test_compare.py  test_diff.py  test_parser.py  test_scanner.py  test_secrets.py  test_settings.py
