[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envsurf"
version = "0.2.0"
description = "Scan .env files against .env.example — detect missing vars, extras, and leaked secrets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jonathan Laporte" }]
keywords = ["env", "dotenv", "secrets", "lint", "security", "cli", "devtools"]
classifiers = [
 "Development Status :: 4 - Beta",
 "Environment :: Console",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3",
 "Topic :: Security",
 "Topic :: Software Development :: Quality Assurance",
 "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
envsurf = "envsurf.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Repository = "https://github.com/jlaportebot/envsurf"
